# owera-mindflow

./: .gitignore  CMakeLists.txt  LICENSE  README.md
packaging/: com.owera.MindFlow.desktop  com.owera.MindFlow.metainfo.xml
packaging/appimage/: build-appimage.sh
packaging/flatpak/: com.owera.MindFlow.yaml
resources/: resources.qrc
src/app/: Inspector.cpp  Inspector.h  MainWindow.cpp  MainWindow.h  main.cpp
src/canvas/: BranchItem.cpp  BranchItem.h  ConnectionItem.cpp  ConnectionItem.h  MindMapView.cpp  MindMapView.h  NodeItem.cpp  NodeItem.h
src/io/: DocumentStore.cpp  DocumentStore.h  Exporters.cpp  Exporters.h  Importers.cpp  Importers.h
src/layout/: LayoutEngine.cpp  LayoutEngine.h
src/model/: Commands.cpp  Commands.h  Connection.cpp  Connection.h  Document.cpp  Document.h  Node.cpp  Node.h  NodeStyle.cpp  NodeStyle.h  Theme.cpp  Theme.h
src/outline/: OutlineView.cpp  OutlineView.h
tests/: test_model.cpp
tools/: gifframes.cpp  render_sample.cpp  uxdblclick.cpp  uxkeys.cpp  uxkeys2.cpp  uxrepro.cpp  uxshortcuts.cpp  uxtest.cpp
